# bin2s

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: bin2s.cpp
